fixed a bug where a missing episode thumbnail would be rendered too large in the recently added episodes list

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,6 +8,33 @@
  *
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
  */
+.clearfix {
+  *zoom: 1;
+}
+.clearfix:before,
+.clearfix:after {
+  display: table;
+  content: "";
+  line-height: 0;
+}
+.clearfix:after {
+  clear: both;
+}
+.hide-text {
+  font: 0/0 a;
+  color: transparent;
+  text-shadow: none;
+  background-color: transparent;
+  border: 0;
+}
+.input-block-level {
+  display: block;
+  width: 100%;
+  min-height: 30px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
 article,
 aside,
 details,
@@ -5058,33 +5085,6 @@ a.thumbnail:focus {
     overflow: visible !important;
   }
 }
-.clearfix {
-  *zoom: 1;
-}
-.clearfix:before,
-.clearfix:after {
-  display: table;
-  content: "";
-  line-height: 0;
-}
-.clearfix:after {
-  clear: both;
-}
-.hide-text {
-  font: 0/0 a;
-  color: transparent;
-  text-shadow: none;
-  background-color: transparent;
-  border: 0;
-}
-.input-block-level {
-  display: block;
-  width: 100%;
-  min-height: 30px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
 .grid-view {
   font-size: 13px;
 }
@@ -7500,14 +7500,14 @@ select {
 .item-details .item-description .actor-grid .thumbnail .image-container {
   min-height: 182px;
 }
+.episode-thumbnail {
+  max-width: 116px;
+}
 .season-list {
   border: 1px solid #E5E5E5;
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   border-radius: 6px;
-}
-.season-list .episode-thumbnail {
-  max-width: 116px;
 }
 .season-list .accordion-group {
   margin-bottom: -1px;
